fixed spacing

--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -137,6 +137,7 @@ section img{
     padding: 10px;
     border-radius: 22px;
     cursor: pointer;
+    margin: .5rem;
     
 }
 .courses button:hover{
@@ -154,4 +155,4 @@ section img{
 #course-list h3 {
     padding: 5px;
 }
-
+ 
