--- a/week01/styles/large.css
+++ b/week01/styles/large.css
@@ -54,10 +54,10 @@
         padding: 0;
         border-radius: 22px;
     }
-    #course-list section {
-        padding: 0;
-        margin: 1rem;
-    }
-    
+   #course-list section {
+       padding: 0;
+       margin: .5rem;
+
+   }
     
 }
